// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should fail when tag is not a string 1`] = `
Object {
  "i18nId": [CastError: Cast to String failed for value "[]" at path "i18nId"],
}
`;

exports[`Tag should fail with missing props 1`] = `
Object {
  "i18nId": [ValidatorError: Path \`i18nId\` is required.],
}
`;
